--- a/history.html
+++ b/history.html
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <div class="card history-card">
+      <div class="card">
         <div class="card-header">
           <h2><i class="fas fa-history"></i> Lịch sử cho ăn</h2>
           <span class="badge" id="historyCount">0 bản ghi</span>
@@ -59,9 +59,9 @@
             <table>
               <thead>
                 <tr>
-                  <th width="40%"><i class="far fa-clock"></i> Thời gian</th>
-                  <th width="30%"><i class="fas fa-tag"></i> Loại</th>
-                  <th width="30%"><i class="fas fa-utensils"></i> Khẩu phần</th>
+                  <th><i class="far fa-clock"></i> Thời gian</th>
+                  <th><i class="fas fa-tag"></i> Loại</th>
+                  <th><i class="fas fa-utensils"></i> Khẩu phần</th>
                 </tr>
               </thead>
               <tbody id="historyTableBody">
